# Raytracer

./: CMakeLists.txt  README.md  run.sh
src/: camera.cpp  color.cpp  cube.cpp  intersect.h  main.cpp  object.h  skybox.cpp  skybox.h
src/headers/: camera.h  color.h  cube.h  material.h
